[BlackBerry] Fix warning for comparison between signed and unsigned https://bugs.webkit.org/show_bug.cgi?id=104563

Reviewed by Rob Buis.

* WebKitSupport/InputHandler.cpp:
(BlackBerry::WebKit::InputHandler::isCaretAtEndOfText):


Canonical link: https://commits.webkit.org/122722@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137163 268f45cc-cd09-0410-ab3c-d52691b4dbfc